--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,99 +1,78 @@
-name: CI/CD Pipeline
+name: CI/CD - Build & Deploy to GKE
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:  # Permet de lancer manuellement
 
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-  GKE_CLUSTER: university-notes-cluster
-  GKE_ZONE: us-central1-a
-  BACKEND_IMAGE: university-notes-backend
-  FRONTEND_IMAGE: university-notes-frontend
+  REGION: us-central1              # ⚠️ Change si tu as choisi une autre région
+  GAR_REPO: note-repo
+  BACKEND_IMAGE: backend
+  FRONTEND_IMAGE: frontend
+  CLUSTER_NAME: notes-cluster      # ⚠️ Change si ton cluster a un autre nom
 
 jobs:
   build-and-deploy:
-    name: Build and Deploy to GKE
     runs-on: ubuntu-latest
-    
+    permissions:
+      contents: read
+      id-token: write                 # Obligatoire pour Workload Identity Federation
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup Google Cloud CLI
-      uses: google-github-actions/setup-gcloud@v1
-      with:
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
-        export_default_credentials: true
+      # Authentification GCP via Workload Identity (keyless !)
+      - name: Authenticate to Google Cloud
+        id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          workload_identity_provider: projects/240159939812/locations/global/workloadIdentityPools/github-pool/providers/github-provider
+          service_account: github-actions-sa@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
 
-    - name: Configure Docker to use gcloud
-      run: |
-        gcloud auth configure-docker
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
 
-    - name: Build Backend Docker Image
-      run: |
-        docker build -t gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA \
-          -t gcr.io/$PROJECT_ID/$BACKEND_IMAGE:latest \
-          ./backend
+      # Configure Docker pour push vers Artifact Registry
+      - name: Configure Docker for GAR
+        run: |
+          gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
-    - name: Build Frontend Docker Image
-      run: |
-        docker build -t gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:$GITHUB_SHA \
-          -t gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:latest \
-          ./frontend
+      # Build & Push Backend
+      - name: Build and Push Backend Image
+        run: |
+          cd backend
+          docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPO }}/${{ env.BACKEND_IMAGE }}:latest .
+          docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPO }}/${{ env.BACKEND_IMAGE }}:latest
 
-    - name: Push Backend Image to GCR
-      run: |
-        docker push gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA
-        docker push gcr.io/$PROJECT_ID/$BACKEND_IMAGE:latest
+      # Build & Push Frontend
+      - name: Build and Push Frontend Image
+        run: |
+          cd frontend
+          docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPO }}/${{ env.FRONTEND_IMAGE }}:latest .
+          docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPO }}/${{ env.FRONTEND_IMAGE }}:latest
 
-    - name: Push Frontend Image to GCR
-      run: |
-        docker push gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:$GITHUB_SHA
-        docker push gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:latest
+      # Connexion au cluster GKE
+      - name: Get GKE Credentials
+        run: |
+          gcloud container clusters get-credentials ${{ env.CLUSTER_NAME }} \
+            --region ${{ env.REGION }} \
+            --project ${{ env.PROJECT_ID }}
 
-    - name: Get GKE Credentials
-      run: |
-        gcloud container clusters get-credentials $GKE_CLUSTER \
-          --zone $GKE_ZONE \
-          --project $PROJECT_ID
+      # Déploiement Kubernetes
+      - name: Deploy to GKE
+        run: |
+          kubectl apply -f k8s/backend-deployment.yaml
+          kubectl apply -f k8s/frontend-deployment.yaml
+          kubectl apply -f k8s/db-secret.yaml
+          kubectl rollout status deployment/backend --timeout=300s
+          kubectl rollout status deployment/frontend --timeout=300s
 
-    - name: Deploy to GKE
-      run: |
-        # Créer le namespace si nécessaire
-        kubectl apply -f k8s/namespace.yaml
-        
-        # Appliquer les secrets et configmaps
-        kubectl apply -f k8s/postgres-secret.yaml
-        kubectl apply -f k8s/backend-configmap.yaml
-        
-        # Appliquer les PVC
-        kubectl apply -f k8s/postgres-pv.yaml
-        
-        # Déployer PostgreSQL
-        kubectl apply -f k8s/postgres-deployment.yaml
-        
-        # Attendre que PostgreSQL soit prêt
-        kubectl rollout status deployment/postgres -n university-notes --timeout=5m
-        
-        # Mettre à jour les images dans les déploiements
-        sed -i "s|gcr.io/PROJECT_ID|gcr.io/$PROJECT_ID|g" k8s/backend-deployment.yaml
-        sed -i "s|gcr.io/PROJECT_ID|gcr.io/$PROJECT_ID|g" k8s/frontend-deployment.yaml
-        
-        # Déployer Backend
-        kubectl apply -f k8s/backend-deployment.yaml
-        kubectl rollout status deployment/backend -n university-notes --timeout=5m
-        
-        # Déployer Frontend
-        kubectl apply -f k8s/frontend-deployment.yaml
-        kubectl rollout status deployment/frontend -n university-notes --timeout=5m
-
-    - name: Get Service URL
-      run: |
-        echo "Waiting for LoadBalancer IP..."
-        kubectl get service frontend-service -n university-notes -w
+      - name: Success Message
+        run: |
+          echo "🚀 Déploiement réussi !"
+          echo "Frontend accessible via l'IP du Service frontend-service (LoadBalancer)"
+          echo "Vérifie avec : kubectl get svc frontend-service"
