--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -2,9 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend
-  namespace: university-notes
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: frontend
@@ -15,38 +14,25 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: gcr.io/PROJECT_ID/university-notes-frontend:latest  # REMPLACEZ PROJECT_ID
+        image: LOCATION-docker.pkg.dev/PROJECT_ID/note-repo/frontend:latest
         ports:
         - containerPort: 80
+        env:
+        - name: VITE_API_URL
+          value: "https://ton-domaine/api"  # Ou via Ingress
         resources:
           requests:
-            memory: "64Mi"
-            cpu: "50m"
-          limits:
             memory: "128Mi"
             cpu: "100m"
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 80
-          initialDelaySeconds: 10
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 80
-          initialDelaySeconds: 5
-          periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
-  namespace: university-notes
 spec:
   selector:
     app: frontend
   ports:
-  - port: 80
+    - port: 80
     targetPort: 80
-  type: LoadBalancer
+  type: LoadBalancer  # Pour exposer publiquement (IP externe)
