--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,33 +1,34 @@
-# Étape 1 : Build de l'application
+# Étape 1 : Build de l'application TypeScript
 FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Copie des fichiers package pour installer les deps
+# Copie des fichiers package
 COPY package*.json ./
-# Installe TOUTES les dépendances (y compris dev pour le build)
+
+# Installe toutes les dépendances (y compris devDependencies pour tsc)
 RUN npm ci
 
-# Copie du code source
+# Copie du code source complet
 COPY . .
 
 # Compilation TypeScript → JavaScript
 RUN npm run build
 
-# Étape 2 : Image finale légère (seulement runtime)
+# Étape 2 : Image finale légère (runtime seulement)
 FROM node:20-alpine
 
 WORKDIR /app
 
-# Copie seulement les fichiers nécessaires depuis l'étape builder
+# Copie uniquement ce qui est nécessaire depuis le builder
 COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/prisma ./prisma 
-# Installe seulement les dependencies de production
+
+# Installe uniquement les dépendances de production
 RUN npm ci --only=production
 
 # Expose le port
 EXPOSE 5000
 
-# Commande : migrations Sequelize + démarrage
+# Commande de démarrage : migrations Sequelize + lancement serveur
 CMD ["sh", "-c", "npx sequelize-cli db:migrate && node dist/index.js"]
